--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".login" />
         <activity android:name=".vender" />
+        <activity android:name=".registro" />
+        <activity android:name=".image"></activity>
     </application>
 
 </manifest>
