--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'me.himanshusoni.quantityview:quantity-view:1.2.0'
+    compile 'com.mcxiaoke.volley:library:1.0.19'
 }
