--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.apps.michelramirez.comes_3">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +24,8 @@
         <activity android:name=".login" />
         <activity android:name=".vender" />
         <activity android:name=".registro" />
-        <activity android:name=".image"></activity>
+        <activity android:name=".image" />
+        <activity android:name=".opciones"></activity>
     </application>
 
 </manifest>
