--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
 
     compile 'me.himanshusoni.quantityview:quantity-view:1.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
