--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.daasuu:EasingInterpolator:1.0.0'
 }
